fixed about section height not showing all text on ipad

--- a/app/sass/2-modules/_media.sass
+++ b/app/sass/2-modules/_media.sass
@@ -10,7 +10,7 @@
 @media #{$iPad}
 
   #about
-    height: 1300px
+    height: 1400px
 
   #logo
     font-size: 60px
